src/c_include/pruio.h

typedef int int32;             //!< 32 bit signed integer data type.
typedef unsigned char uint8;   //!< 8 bit unsigned integer data type.
typedef unsigned short uint16; //!< 16 bit unsigned integer data type.
typedef unsigned int uint32;   //!< 32 bit unsigned integer data type.
typedef float float_t;         //!< float data type.
//! forward declaration
typedef struct pruIo pruIo;
/** \brief Wrapper enumerators for ActivateDevice.

\since 0.2
*/
enum activateDevice{
  PRUIO_ACT_PRU1  =   1      //!< Activate PRU-1 (= default, instead of PRU-0).
, PRUIO_ACT_ADC   = 1 << 1   //!< Activate ADC.
, PRUIO_ACT_GPIO0 = 1 << 2   //!< Activate GPIO-0.
, PRUIO_ACT_GPIO1 = 1 << 3   //!< Activate GPIO-1.
, PRUIO_ACT_GPIO2 = 1 << 4   //!< Activate GPIO-2.
, PRUIO_ACT_GPIO3 = 1 << 5   //!< Activate GPIO-3.
, PRUIO_ACT_PWM0  = 1 << 6   //!< Activate PWMSS-0 (including eCAP, eQEP, ePWM).
, PRUIO_ACT_PWM1  = 1 << 7   //!< Activate PWMSS-1 (including eCAP, eQEP, ePWM).
, PRUIO_ACT_PWM2  = 1 << 8   //!< Activate PWMSS-2 (including eCAP, eQEP, ePWM).
, PRUIO_ACT_TIM4  = 1 << 9   //!< Activate TIMER-4.
, PRUIO_ACT_TIM5  = 1 << 10  //!< Activate TIMER-5.
, PRUIO_ACT_TIM6  = 1 << 11  //!< Activate TIMER-6.
, PRUIO_ACT_TIM7  = 1 << 12  //!< Activate TIMER-7.
, PRUIO_DEF_ACTIVE = 0xFFFF  //!< Activate all subsystems.
};
/** \brief Wrapper structure for PruIo.

\since 0.0
*/
typedef struct pruIo{
  char* Errr;      //!< Pointer for error messages.

  adcUdt* Adc;     //!< Pointer to ADC subsystem structure.
  gpioUdt* Gpio;   //!< Pointer to GPIO subsystem structure.
  pwmssUdt* PwmSS; //!< Pointer to PWMSS subsystem structure.
  //timerUdt* TimSS; //!< Pointer to TIMER subsystem structure.
  pwmMod* Pwm;     //!< Pointer to ePWM module structure (in PWMSS subsystem).
  capMod* Cap;     //!< Pointer to eCAP module structure (in PWMSS subsystem).
  qepMod* Qep;     //!< pointer to eQEP module structure (in PWMSS subsystem)

  uint32* DRam;    //!< Pointer to access PRU DRam.
  ballSet
    *Init,         //!< The subsystems register data at start-up (to restore subsystems at the end).
    *Conf;         //!< The subsystems register data used by libpruio (current local data).
  void
    *ERam,         //!< Pointer to read PRU external ram.
    *DInit,        //!< Pointer to block of subsystems initial data.
    *DConf,        //!< Pointer to block of subsystems configuration data.
    *MOffs;        //!< Configuration offset for modules.
  uint8
    *BallInit,     //!< Pointer for original Ball configuration.
    *BallConf;     //!< Pointer to ball configuration (CPU pin muxing).
  uint32
    EAddr,         //!< The address of the external memory (PRUSS-DDR).
    ESize,         //!< The size of the external memory (PRUSS-DDR).
    DSize,         //!< The size of a data block (DInit or DConf).
    PruNo,         //!< The PRU number to use (defaults to 1).
    PruIRam,       //!< The PRU instruction ram to load.
    PruDRam;       //!< The PRU data ram.
  int16
    ParOffs,       //!< The offset for the parameters of a module.
    DevAct;        //!< Active subsystems.
//! List of GPIO numbers, corresponding to ball index.
  uint8 BallGpio[PRUIO_AZ_BALL + 1];
//! Interrupt settings (we also set default interrupts, so that the other PRUSS can be used in parallel).
  struct __pruss_intc_initdata IntcInit;
} pruIo;
/** \brief Wrapper function for the constructor PruIo::PruIo().
\param Act The mask for active subsystems and PRU number.
\param Av The avaraging for default steps (0 to 16, defaults to 0).
\param OpD The open delay for default steps (0 to 0x3FFFF, defaults to 0x98).
\param SaD The sample delay for default steps (0 to 255, defaults to 0).
\returns A pointer for the new instance.

Since the constructor reads the original subsystem configurations and
the destructor restores them, it's recommended to create and use just
one PruIo instance at the same time.

\since 0.0
*/
pruIo* pruio_new(uint16 Act, uint8 Av, uint32 OpD, uint8 SaD);
/** \brief Wrapper function for the destructor PruIo::~PruIo.
\param Io The pointer of the instance.

\since 0.0
*/
void pruio_destroy(pruIo* Io);
/** \brief Wrapper function for PruIo::config().
\param Io The pointer of the  PruIo instance.
\param Samp The number of samples to fetch (defaults to zero).
\param Mask The mask for active steps (defaults to all 8 channels active in steps 1 to 8).
\param Tmr The timer value in [ns] to specify the sampling rate (defaults to zero, MM only).
\param Mds The modus for output bit encoding (defaults to 4 = 16 bit).
\returns Zero on success (otherwise a string with an error message).

\since 0.2
*/
char* pruio_config(pruIo* Io, uint32 Samp, uint32 Mask, uint32 Tmr, uint16 Mds);
/** \brief Wrapper function for PruIo::Pin().
\param Io The pointer of the  PruIo instance.
\param Ball The CPU ball number to describe.
\returns A human-readable text string (internal string, never free it).

\since 0.2
*/
char* pruio_Pin(pruIo* Io, uint8 Ball);
/** \brief Wrapper function for PruIo::mm_start().
\param Io The pointer of the  PruIo instance.
\param Trg1 Settings for first trigger (default = no trigger).
\param Trg2 Settings for second trigger (default = no trigger).
\param Trg3 Settings for third trigger (default = no trigger).
\param Trg4 Settings for fourth trigger (default = no trigger).
\returns Zero on success (otherwise a string with an error message).

\since 0.2
*/
char* pruio_mm_start(pruIo* Io, uint32 Trg1, uint32 Trg2, uint32 Trg3, uint32 Trg4);
/** \brief Wrapper function for PruIo::rb_start().
\param Io The pointer of the  PruIo instance.
\returns Zero on success (otherwise a string with an error message).

\since 0.2
*/
char* pruio_rb_start(pruIo* Io);
/** \brief Wrapper function for GpioUdt::config().
\param Io The pointer of the  PruIo instance.
\param Ball The CPU ball number to set.
\param Modus The mode for the GPIO.
\returns Zero on success (otherwise a pointer to an error message).

\since 0.2
*/
char* pruio_gpio_config(pruIo* Io, uint8 Ball, uint8 Modus);
/** \brief Wrapper function for GpioUdt::setValue().
\param Io The pointer of the  PruIo instance.
\param Ball The CPU ball number to set.
\param Modus The mode for the GPIO output.
\returns Zero on success (otherwise a pointer to an error message).

\since 0.2
*/
char* pruio_gpio_setValue(pruIo* Io, uint8 Ball, uint8 Modus);
/** \brief Wrapper function for GpioUdt::Value().
\param Io The pointer of the  PruIo instance.
\param Ball The CPU ball number to test.
\returns The GPIO state (otherwise -1, check  PruIo::Errr for an error message).

\since 0.2
*/
uint32 pruio_gpio_Value(pruIo* Io, uint8 Ball);
/** \brief Wrapper function for AdcUdt::setStep().
\param Io The pointer of the  PruIo instance.
\param Stp Step index (0 = step 0 => charge step, 1 = step 1 (=> AIN0 by default),  ..., 17 = idle step).
\param ChN Channel number to scan (0 = AIN0, 1 = AIN1, ...).
\param Av New value for avaraging (defaults to 4).
\param SaD New value for sample delay (defaults to 0).
\param OpD New value for open delay (defaults to 0x98).
\returns Zero on success (otherwise a string with an error message).

\since 0.2
*/
char* pruio_adc_setStep(pruIo* Io, uint8 Stp, uint8 ChN, uint8 Av, uint8 SaD, uint32 OpD);
/** \brief Wrapper function for AdcUdt::mm_trg_pin().
\param Io The pointer of the  PruIo instance.
\param Ball The CPU ball number to test.
\param GpioV The state to check (defaults to high = 1).
\param Skip The number of samples to skip (defaults to 0 = zero, max. 1023).
\returns The trigger configuration (or zero in case of an error, check  PruIo::Errr).

\since 0.2
*/
uint32 pruio_adc_mm_trg_pin(pruIo* Io, uint8 Ball, uint8 GpioV, uint16 Skip);
/** \brief Wrapper function for AdcUdt::mm_trg_ain().
\param Io The pointer of the  PruIo instance.
\param Stp The step number to use for trigger input.
\param AdcV The sample value to match (positive check greater than, negative check less than).
\param Rela If AdcV is relative to the current input.
\param Skip The number of samples to skip (defaults to 0 = zero, max. 1023).
\returns The trigger configuration (or zero in case of an error, check  PruIo::Errr).

\since 0.2
*/
uint32 pruio_adc_mm_trg_ain(pruIo* Io, uint8 Stp, int32 AdcV, uint8 Rela, uint16 Skip);
/** \brief Wrapper function for AdcUdt::mm_trg_pre().
\param Io The pointer of the  PruIo instance.
\param Stp The step number to use for trigger input.
\param AdcV The sample value to match (positive check greater than, negative check less than).
\param Samp The number of samples for the pre-trigger.
\param Rela If AdcV is relative to the current input.
\returns The trigger configuration (or zero in case of an error, check  PruIo::Errr).

\since 0.2
*/
uint32 pruio_adc_mm_trg_pre(pruIo* Io, uint8 Stp, int32 AdcV, uint16 Samp, uint8 Rela);
/** \brief Wrapper function for CapMod::config().
\param Io The pointer of the  PruIo instance.
\param Ball The CPU ball number to configure.
\param FLow Minimal frequency to measure (> .0232831).
\returns Zero on success (otherwise a string with an error message).

\since 0.2
*/
char* pruio_cap_config(pruIo* Io, uint8 Ball, float_t FLow);