src/python/libpruio/pruio.py


class GpioSet(Structure):
  pass 
GpioSet._fields_ = [
  ('DeAd', UInt32),
  ('ClAd', UInt32),
  ('ClVa', UInt32),
  ('REVISION', UInt32),
  ('SYSCONFIG', UInt32),
  ('EOI', UInt32),
  ('IRQSTATUS_RAW_0', UInt32),
  ('IRQSTATUS_RAW_1', UInt32),
  ('IRQSTATUS_0', UInt32),
  ('IRQSTATUS_1', UInt32),
  ('IRQSTATUS_SET_0', UInt32),
  ('IRQSTATUS_SET_1', UInt32),
  ('IRQSTATUS_CLR_0', UInt32),
  ('IRQSTATUS_CLR_1', UInt32),
  ('IRQWAKEN_0', UInt32),
  ('IRQWAKEN_1', UInt32),
  ('SYSSTATUS', UInt32),
  ('CTRL', UInt32),
  ('OE', UInt32),
  ('DATAIN', UInt32),
  ('DATAOUT', UInt32),
  ('LEVELDETECT0', UInt32),
  ('LEVELDETECT1', UInt32),
  ('RISINGDETECT', UInt32),
  ('FALLINGDETECT', UInt32),
  ('DEBOUNCENABLE', UInt32),
  ('DEBOUNCINGTIME', UInt32),
  ('CLEARDATAOUT', UInt32),
  ('SETDATAOUT', UInt32),
]

# pruio_gpio.bi: 75

class GpioArr(Structure):
  pass 
GpioArr._fields_ = [
  ('DeAd', UInt32),
  ('DATAIN', UInt32),
  ('DATAOUT', UInt32),
  ('Mix', UInt32),
]

# pruio_gpio.bi: 111
GpioUdt._fields_ = [
  ('Top', POINTER(Pruio_)),
  ('Init', POINTER(GpioSet) * (PRUIO_AZ_GPIO + 1)),
  ('Conf', POINTER(GpioSet) * (PRUIO_AZ_GPIO + 1)),
  ('Raw', POINTER(GpioArr) * (PRUIO_AZ_GPIO + 1)),
  ('InitParA', UInt32),
  ('E0', c_char_p),
  ('E1', c_char_p),
]


# pruio_pwmss.bi: 134

class PwmssSet(Structure):
  pass 
PwmssSet._fields_ = [
  ('DeAd', UInt32),
  ('ClAd', UInt32),
  ('ClVa', UInt32),
  ('IDVER', UInt32),
  ('SYSCONFIG', UInt32),
  ('CLKCONFIG', UInt32),
  ('CLKSTATUS', UInt32),
  ('TSCTR', UInt32),
  ('CTRPHS', UInt32),
  ('CAP1', UInt32),
  ('CAP2', UInt32),
  ('CAP3', UInt32),
  ('CAP4', UInt32),
  ('ECCTL1', UInt16),
  ('ECCTL2', UInt16),
  ('ECEINT', UInt16),
  ('ECFLG', UInt16),
  ('ECCLR', UInt16),
  ('ECFRC', UInt16),
  ('CAP_REV', UInt32),
  ('QPOSCNT', UInt32),
  ('QPOSINIT', UInt32),
  ('QPOSMAX', UInt32),
  ('QPOSCMP', UInt32),
  ('QPOSILAT', UInt32),
  ('QPOSSLAT', UInt32),
  ('QPOSLAT', UInt32),
  ('QUTMR', UInt32),
  ('QUPRD', UInt32),
  ('QWDTMR', UInt16),
  ('QWDPRD', UInt16),
  ('QDECCTL', UInt16),
  ('QEPCTL', UInt16),
  ('QCAPCTL', UInt16),
  ('QPOSCTL', UInt16),
  ('QEINT', UInt16),
  ('QFLG', UInt16),
  ('QCLR', UInt16),
  ('QFRC', UInt16),
  ('QEPSTS', UInt16),
  ('QCTMR', UInt16),
  ('QCPRD', UInt16),
  ('QCTMRLAT', UInt16),
  ('QCPRDLAT', UInt16),
  ('empty', UInt16),
  ('QEP_REV', UInt32),
  ('TBCTL', UInt16),
  ('TBSTS', UInt16),
  ('TBPHSHR', UInt16),
  ('TBPHS', UInt16),
  ('TBCNT', UInt16),
  ('TBPRD', UInt16),
  ('CMPCTL', UInt16),
  ('CMPAHR', UInt16),
  ('CMPA', UInt16),
  ('CMPB', UInt16),
  ('AQCTLA', UInt16),
  ('AQCTLB', UInt16),
  ('AQSFRC', UInt16),
  ('AQCSFRC', UInt16),
  ('DBCTL', UInt16),
  ('DBRED', UInt16),
  ('DBFED', UInt16),
  ('TZSEL', UInt16),
  ('TZCTL', UInt16),
  ('TZEINT', UInt16),
  ('TZFLG', UInt16),
  ('TZCLR', UInt16),
  ('TZFRC', UInt16),
  ('ETSEL', UInt16),
  ('ETPS', UInt16),
  ('ETFLG', UInt16),
  ('ETCLR', UInt16),
  ('ETFRC', UInt16),
  ('PCCTL', UInt16),
  ('HRCTL', UInt16),
]

# pruio_pwmss.bi: 157

class PwmssArr(Structure):
  pass 
PwmssArr._fields_ = [
  ('DeAd', UInt32),
  ('CMax', UInt32),
  ('C1', UInt32),
  ('C2', UInt32),
  ('QPos', UInt32),
  ('NPos', UInt32),
  ('OPos', UInt32),
  ('PLat', UInt32),
]

# pruio_pwmss.bi: 224
PwmssUdt._fields_ = [
  ('Top', POINTER(Pruio_)),
  ('Init', POINTER(PwmssSet) * (PRUIO_AZ_PWMSS + 1)),
  ('Conf', POINTER(PwmssSet) * (PRUIO_AZ_PWMSS + 1)),
  ('Raw', POINTER(PwmssArr) * (PRUIO_AZ_PWMSS + 1)),
  ('InitParA', UInt32),
  ('PwmMode', UInt16),
  ('CapMode', UInt16),
  ('E0', c_char_p),
  ('E1', c_char_p),
  ('E2', c_char_p),
  ('E3', c_char_p),
  ('E4', c_char_p),
  ('E5', c_char_p),
  ('E6', c_char_p),
  ('E7', c_char_p),
  ('E8', c_char_p),
  ('E9', c_char_p),
]

# pruio_pwmss.bi: 272
PwmMod._fields_ = [
  ('Top', POINTER(Pruio_)),
  ('ForceUpDown', UInt16),
  ('Cntrl', UInt16 * (PRUIO_AZ_PWMSS + 1)),
  ('AqCtl', UInt16 * ((1 + 1) * (PRUIO_AZ_PWMSS + 1) * (2 + 1))),
]

# pruio_pwmss.bi: 299
CapMod._fields_ = [
  ('Top', POINTER(Pruio_)),
]

# pruio_pwmss.bi: 332
QepMod._fields_ = [
  ('Top', POINTER(Pruio_)),
  ('FVh', Float_t * (PRUIO_AZ_PWMSS + 1)),
  ('FVl', Float_t * (PRUIO_AZ_PWMSS + 1)),
  ('Prd', UInt32 * (PRUIO_AZ_PWMSS + 1)),
]


# pruio_timer.bi: 45

class TimerSet(Structure):
  pass 
TimerSet._fields_ = [
  ('DeAd', UInt32),
  ('ClAd', UInt32),
  ('ClVa', UInt32),
  ('TIDR', UInt32),
  ('TIOCP_CFG', UInt32),
  ('IRQ_EOI', UInt32),
  ('IRQSTATUS_RAW', UInt32),
  ('IRQSTATUS', UInt32),
  ('IRQENABLE_SET', UInt32),
  ('IRQENABLE_CLR', UInt32),
  ('IRQWAKEEN', UInt32),
  ('TCLR', UInt32),
  ('TCRR', UInt32),
  ('TLDR', UInt32),
  ('TTGR', UInt32),
  ('TWPS', UInt32),
  ('TMAR', UInt32),
  ('TCAR1', UInt32),
  ('TSICR', UInt32),
  ('TCAR2', UInt32),
]

# pruio_timer.bi: 61

class TimerArr(Structure):
  pass 
TimerArr._fields_ = [
  ('DeAd', UInt32),
  ('CMax', UInt32),
  ('TCAR1', UInt32),
  ('TCAR2', UInt32),
]

# pruio_timer.bi: 117
TimerUdt._fields_ = [
  ('Top', POINTER(Pruio_)),
  ('Init', POINTER(TimerSet) * (PRUIO_AZ_TIMER + 1)),
  ('Conf', POINTER(TimerSet) * (PRUIO_AZ_TIMER + 1)),
  ('Raw', POINTER(TimerArr) * (PRUIO_AZ_TIMER + 1)),
  ('InitParA', UInt32),
  ('PwmMode', UInt32),
  ('TimMode', UInt32),
  ('TimHigh', UInt32),
  ('Tim_Low', UInt32),
  ('CapMode', UInt32),
  ('E0', c_char_p),
  ('E1', c_char_p),
  ('E2', c_char_p),
]


# pruio.bi: 36
try: PRUIO_CHAN = CHANNEL5
except: pass

# pruio.bi: 38
try: PRUIO_MASK = PRU_EVTOUT5_HOSTEN_MASK
except: pass

# pruio.bi: 40
try: PRUIO_EMAP = PRU_EVTOUT5
except: pass

# pruio.bi: 42
try: PRUIO_EVNT = PRU_EVTOUT_5
except: pass

# pruio.bi: 86
try: PRUIO_ACT_PRU1 = 0b0000000000001 
except: pass
try: PRUIO_ACT_ADC = 0b0000000000010 
except: pass
try: PRUIO_ACT_GPIO0 = 0b0000000000100 
except: pass
try: PRUIO_ACT_GPIO1 = 0b0000000001000 
except: pass
try: PRUIO_ACT_GPIO2 = 0b0000000010000 
except: pass
try: PRUIO_ACT_GPIO3 = 0b0000000100000 
except: pass
try: PRUIO_ACT_PWM0 = 0b0000001000000 
except: pass
try: PRUIO_ACT_PWM1 = 0b0000010000000 
except: pass
try: PRUIO_ACT_PWM2 = 0b0000100000000 
except: pass
try: PRUIO_ACT_TIM4 = 0b0001000000000 
except: pass
try: PRUIO_ACT_TIM5 = 0b0010000000000 
except: pass
try: PRUIO_ACT_TIM6 = 0b0100000000000 
except: pass
try: PRUIO_ACT_TIM7 = 0b1000000000000 
except: pass
try: PRUIO_DEF_ACTIVE = 0b1111111111111 
except: pass

# pruio.bi: 102

class BallSet(Structure):
  pass 
BallSet._fields_ = [
  ('DeAd', UInt32),
  ('Value', UInt8 * (PRUIO_AZ_BALL + 1)),
]

# pruio.bi: 221
PruIo._fields_ = [
  ('Errr', c_char_p),
  ('Adc', POINTER(AdcUdt)),
  ('Gpio', POINTER(GpioUdt)),
  ('PwmSS', POINTER(PwmssUdt)),
  ('TimSS', POINTER(TimerUdt)),
  ('Pwm', POINTER(PwmMod)),
  ('Cap', POINTER(CapMod)),
  ('Qep', POINTER(QepMod)),
  ('Tim', POINTER(TimerUdt)),
  ('DRam', POINTER(UInt32)),
  ('Init', POINTER(BallSet)),
  ('Conf', POINTER(BallSet)),
  ('ERam', c_void_p),
  ('DInit', c_void_p),
  ('DConf', c_void_p),
  ('MOffs', c_void_p),
  ('BallInit', POINTER(UInt8)),
  ('BallConf', POINTER(UInt8)),
  ('EAddr', UInt32),
  ('ESize', UInt32),
  ('DSize', UInt32),
  ('PruNo', UInt32),
  ('PruIRam', UInt32),
  ('PruDRam', UInt32),
  ('ParOffs', Int16),
  ('DevAct', Int16),
  ('BallGpio', UInt8 * (PRUIO_AZ_BALL + 1)),
  ('IntcInit', tpruss_intc_initdata),
  ('MuxAcc', c_void_p * 3),
]


# pruio_c_wrapper.bas: 28
if hasattr(_libs['pruio'], 'pruio_new'):
  pruio_new = _libs['pruio'].pruio_new
  pruio_new.argtypes = [UInt16, UInt8, UInt32, UInt8]
  pruio_new.restype = POINTER(PruIo)

# pruio_c_wrapper.bas: 35
if hasattr(_libs['pruio'], 'pruio_destroy'):
  pruio_destroy = _libs['pruio'].pruio_destroy
  pruio_destroy.argtypes = [POINTER(PruIo)]
  pruio_destroy.restype = None

# pruio_c_wrapper.bas: 46
if hasattr(_libs['pruio'], 'pruio_config'):
  pruio_config = _libs['pruio'].pruio_config
  pruio_config.argtypes = [POINTER(PruIo), UInt32, UInt32, UInt32, UInt16]
  if sizeof(c_int) == sizeof(c_void_p):
      pruio_config.restype = ReturnString
  else:
      pruio_config.restype = String
      pruio_config.errcheck = ReturnString

# pruio_c_wrapper.bas: 55
if hasattr(_libs['pruio'], 'pruio_Pin'):
  pruio_Pin = _libs['pruio'].pruio_Pin
  pruio_Pin.argtypes = [POINTER(PruIo), UInt8, UInt8]
  if sizeof(c_int) == sizeof(c_void_p):
      pruio_Pin.restype = ReturnString
  else:
      pruio_Pin.restype = String
      pruio_Pin.errcheck = ReturnString

# pruio_c_wrapper.bas: 66
if hasattr(_libs['pruio'], 'pruio_mm_start'):
  pruio_mm_start = _libs['pruio'].pruio_mm_start
  pruio_mm_start.argtypes = [POINTER(PruIo), UInt32, UInt32, UInt32, UInt32]
  if sizeof(c_int) == sizeof(c_void_p):
      pruio_mm_start.restype = ReturnString
  else:
      pruio_mm_start.restype = String
      pruio_mm_start.errcheck = ReturnString

# pruio_c_wrapper.bas: 73
if hasattr(_libs['pruio'], 'pruio_rb_start'):
  pruio_rb_start = _libs['pruio'].pruio_rb_start
  pruio_rb_start.argtypes = [POINTER(PruIo)]
  if sizeof(c_int) == sizeof(c_void_p):
      pruio_rb_start.restype = ReturnString
  else:
      pruio_rb_start.restype = String
      pruio_rb_start.errcheck = ReturnString

# pruio_c_wrapper.bas: 86
if hasattr(_libs['pruio'], 'pruio_adc_setStep'):
  pruio_adc_setStep = _libs['pruio'].pruio_adc_setStep
  pruio_adc_setStep.argtypes = [POINTER(PruIo), UInt8, UInt8, UInt8, UInt8, UInt32]
  if sizeof(c_int) == sizeof(c_void_p):
      pruio_adc_setStep.restype = ReturnString
  else:
      pruio_adc_setStep.restype = String
      pruio_adc_setStep.errcheck = ReturnString

# pruio_c_wrapper.bas: 96
if hasattr(_libs['pruio'], 'pruio_adc_mm_trg_pin'):
  pruio_adc_mm_trg_pin = _libs['pruio'].pruio_adc_mm_trg_pin
  pruio_adc_mm_trg_pin.argtypes = [POINTER(PruIo), UInt8, UInt8, UInt16]
  pruio_adc_mm_trg_pin.restype = UInt32

# pruio_c_wrapper.bas: 107
if hasattr(_libs['pruio'], 'pruio_adc_mm_trg_ain'):
  pruio_adc_mm_trg_ain = _libs['pruio'].pruio_adc_mm_trg_ain
  pruio_adc_mm_trg_ain.argtypes = [POINTER(PruIo), UInt8, Int32, UInt8, UInt16]
  pruio_adc_mm_trg_ain.restype = UInt32

# pruio_c_wrapper.bas: 118
if hasattr(_libs['pruio'], 'pruio_adc_mm_trg_pre'):
  pruio_adc_mm_trg_pre = _libs['pruio'].pruio_adc_mm_trg_pre
  pruio_adc_mm_trg_pre.argtypes = [POINTER(PruIo), UInt8, Int32, UInt16, UInt8]
  pruio_adc_mm_trg_pre.restype = UInt32

# pruio_c_wrapper.bas: 128
if hasattr(_libs['pruio'], 'pruio_gpio_config'):
  pruio_gpio_config = _libs['pruio'].pruio_gpio_config
  pruio_gpio_config.argtypes = [POINTER(PruIo), UInt8, UInt8]
  if sizeof(c_int) == sizeof(c_void_p):
      pruio_gpio_config.restype = ReturnString
  else:
      pruio_gpio_config.restype = String
      pruio_gpio_config.errcheck = ReturnString

# pruio_c_wrapper.bas: 137
if hasattr(_libs['pruio'], 'pruio_gpio_setValue'):
  pruio_gpio_setValue = _libs['pruio'].pruio_gpio_setValue
  pruio_gpio_setValue.argtypes = [POINTER(PruIo), UInt8, UInt8]
  if sizeof(c_int) == sizeof(c_void_p):
      pruio_gpio_setValue.restype = ReturnString
  else:
      pruio_gpio_setValue.restype = String
      pruio_gpio_setValue.errcheck = ReturnString

# pruio_c_wrapper.bas: 145
if hasattr(_libs['pruio'], 'pruio_gpio_Value'):
  pruio_gpio_Value = _libs['pruio'].pruio_gpio_Value
  pruio_gpio_Value.argtypes = [POINTER(PruIo), UInt8]
  pruio_gpio_Value.restype = UInt32

# pruio_c_wrapper.bas: 155
if hasattr(_libs['pruio'], 'pruio_cap_config'):
  pruio_cap_config = _libs['pruio'].pruio_cap_config
  pruio_cap_config.argtypes = [POINTER(PruIo), UInt8, Float_t]
  if sizeof(c_int) == sizeof(c_void_p):
      pruio_cap_config.restype = ReturnString
  else:
      pruio_cap_config.restype = String
      pruio_cap_config.errcheck = ReturnString
